# innowise_laboratory

lecture_1/: .gitignore  main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: queries.sql
lecture_5/: .gitignore
lecture_5/book_api/: main.py  models.py  pyproject.toml  schemas.py
lecture_6/: .dockerignore  Dockerfile  main.py
